@@ -131,10 +131,10 @@ public class VirtualCorpusControllerTest extends VirtualCorpusTestBase {
         assertEquals("system-vc", node.at("/name").asText());
         assertEquals(VirtualCorpusType.SYSTEM.displayName(),
                 node.at("/type").asText());
-        assertEquals(11, node.at("/numberOfDoc"));
-        assertEquals(772, node.at("/numberOfParagraphs"));
-        assertEquals(25074, node.at("/numberOfSentences"));
-        assertEquals(665842, node.at("/numberOfTokens"));
+        assertEquals(11, node.at("/numberOfDoc").asInt());
+        assertEquals(772, node.at("/numberOfParagraphs").asInt());
+        assertEquals(25074, node.at("/numberOfSentences").asInt());
+        assertEquals(665842, node.at("/numberOfTokens").asInt());
     }
 
     @Test
